RESOLVED FIXED29740
Gmail: After changing a foreground text color, pressing return doesn't apply background to new line
https://bugs.webkit.org/show_bug.cgi?id=29740
Summary Gmail: After changing a foreground text color, pressing return doesn't apply ...
Enrica Casucci
Reported 2009-09-25 09:44:56 PDT
* STEPS TO REPRODUCE 1. Launch TOT or stock Safari 4.0.3 under SL 10A342. 2. Login to your Gmail account and click Compose Mail. 3. On the Gmail toolbar , click the Highlight text color icon. Select a color from this palette. 4. Type in the message and verify the background color is applied. Now click on the Text Color icon and choose a different color. 5. Continue to type and verify new text color is being used when you type. 6. Now , press <return> to create a new line. Type on this new line and notice the background color is missing when you type. <rdar://problem/7168738>
Attachments
Patch (11.01 KB, patch)
2009-09-25 10:35 PDT, Enrica Casucci
adele: review+
Patch2 (11.06 KB, patch)
2009-09-25 11:06 PDT, Enrica Casucci
no flags
Enrica Casucci
Comment 1 2009-09-25 10:35:50 PDT
Created attachment 40118 [details] Patch Adding the patch.
Adele Peterson
Comment 2 2009-09-25 10:39:27 PDT
I'm going to commit this.
Darin Adler
Comment 3 2009-09-25 10:40:33 PDT
Comment on attachment 40118 [details] Patch I was about to say r=me, but Adele beat me to it. > +void InsertParagraphSeparatorCommand::ancestorsInsideBlock(const Node* insertionNode, Element* outerBlock, Vector<Element*>& ancestors) Functions with an out argument like this have "get" in their name in the WebKit coding style, so this should be named getAncestorsInsideBlock. But I just realized this is not in the coding style document. We should add that! This also requires an empty vector, because it appends, but does not clear the vector. That's probably OK. I'm not sure. r=me but please add the "get"
Enrica Casucci
Comment 4 2009-09-25 11:06:01 PDT
Created attachment 40125 [details] Patch2 New patch that includes the name change (getAncestorsInsideBlock) and the clear of the vector before appending.
Adele Peterson
Comment 5 2009-09-25 11:58:28 PDT
<rdar://problem/7168738> Committed revision 48764.
Note You need to log in before you can comment on or make changes to this bug.